# typemem

./: .gitignore  README.md  proposal.tex  pyproject.toml
benchmarks/: latency.py  synthetic.py
benchmarks/scenarios/: home_assistant.yaml  kitchen_patrol.yaml  search_rescue.yaml  warehouse_patrol.yaml
configs/examples/: home_assistant.yaml
docs/: proposal.md  proposal.txt
tests/: conftest.py  test_baselines.py  test_chromadb_store.py  test_config.py  test_generate.py  test_system.py
typemem/: __init__.py  baselines.py  chromadb_store.py  config.py  generate.py  store.py  system.py  types.py
